--- a/CamlBuilder4000.csproj
+++ b/CamlBuilder4000.csproj
@@ -41,7 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CamlBuilder.cs" />
+    <Compile Include="FieldTypes\CamlBoolField.cs" />
+    <Compile Include="FieldTypes\CamlDateField.cs" />
+    <Compile Include="FieldTypes\CamlLookupIdField.cs" />
+    <Compile Include="FieldTypes\CamlNumberField.cs" />
+    <Compile Include="Internal\CamlFieldPicker.cs" />
+    <Compile Include="Internal\CamlOperatorPicker.cs" />
+    <Compile Include="FieldTypes\CamlTextField.cs" />
+    <Compile Include="Internal\Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
