--- a/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
+++ b/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
@@ -43,8 +43,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library1.fs" />
-    <None Include="Script.fsx" />
+    <Compile Include="XmlNodeFactories.fs" />
+    <Compile Include="PartPickers.fs" />
+    <Compile Include="WhereBuilder.fs" />
+    <Compile Include="CamlBuilder.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
