Replacing members with extensions methods

--- a/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
+++ b/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
@@ -44,7 +44,10 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="XmlNodeFactories.fs" />
-    <Compile Include="PartPickers.fs" />
+    <Compile Include="NodePickers\Declarations.fs" />
+    <Compile Include="NodePickers\LogicalOperatorPicker.fs" />
+    <Compile Include="NodePickers\FieldTypePicker.fs" />
+    <Compile Include="NodePickers\TextFieldFilterPicker.fs" />
     <Compile Include="WhereBuilder.fs" />
     <Compile Include="CamlBuilder.fs" />
     <Content Include="packages.config" />
