--- a/CamlBuilder.Tests/CamlBuilder.Tests.fsproj
+++ b/CamlBuilder.Tests/CamlBuilder.Tests.fsproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="TextFilters.fs" />
+    <Compile Include="LogicalConditionsRepeated.fs" />
+    <Compile Include="BugFix.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
