--- a/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
+++ b/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
@@ -48,6 +48,8 @@
     <Compile Include="NodePickers\LogicalOperatorPicker.fs" />
     <Compile Include="NodePickers\FieldTypePicker.fs" />
     <Compile Include="NodePickers\FilterPickers\TextFieldFilterPicker.fs" />
+    <Compile Include="NodePickers\FilterPickers\LookupIdFieldFilterPicker.fs" />
+    <Compile Include="NodePickers\FilterPickers\DateFieldFilterPicker.fs" />
     <Compile Include="WhereBuilder.fs" />
     <Compile Include="CamlBuilder.fs" />
     <Content Include="packages.config" />
