More date filters

--- a/CamlBuilder.Tests/CamlBuilder.Tests.fsproj
+++ b/CamlBuilder.Tests/CamlBuilder.Tests.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="Lookup.fs" />
+    <Compile Include="DateFilters.fs" />
     <Compile Include="TextFilters.fs" />
     <Compile Include="LogicalConditionsRepeated.fs" />
     <Compile Include="BugFix.fs" />
