Including fileDirRef isequalto filter

--- a/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
+++ b/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="NodePickers\FilterPickers\LookupFieldFilterPicker.fs" />
     <Compile Include="NodePickers\FilterPickers\LookupMultiFieldFilterPicker.fs" />
     <Compile Include="NodePickers\FilterPickers\BoolFieldFilterPicker.fs" />
+    <Compile Include="NodePickers\FilterPickers\FileDirRefFilterPicker.fs" />
     <Compile Include="WhereBuilder.fs" />
     <Compile Include="CamlBuilder.fs" />
     <Content Include="packages.config" />
