Adding number field

--- a/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
+++ b/CamlBuilder.NetFramework/CamlBuilder.NetFramework.fsproj
@@ -47,14 +47,17 @@
     <Compile Include="NodePickers\Declarations.fs" />
     <Compile Include="NodePickers\LogicalOperatorPicker.fs" />
     <Compile Include="NodePickers\FieldTypePicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\TextFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\DateFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\LookupFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\LookupMultiFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\BoolFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\FileDirRefFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\ChoiceFieldFilterPicker.fs" />
-    <Compile Include="NodePickers\FilterPickers\UniqueIdFilterPicker.fs" />
+    <Compile Include="NodePickers\FilterPickers\Text.fs" />
+    <Compile Include="NodePickers\FilterPickers\Date.fs" />
+    <Compile Include="NodePickers\FilterPickers\Lookup.fs" />
+    <Compile Include="NodePickers\FilterPickers\LookupMulti.fs" />
+    <Compile Include="NodePickers\FilterPickers\Bool.fs" />
+    <Compile Include="NodePickers\FilterPickers\FileDirRef.fs" />
+    <Compile Include="NodePickers\FilterPickers\Choice.fs" />
+    <Compile Include="NodePickers\FilterPickers\UniqueId.fs" />
+    <Compile Include="NodePickers\FilterPickers\NumberInt.fs" />
+    <Compile Include="NodePickers\FilterPickers\NumberFloat.fs" />
+    <Compile Include="NodePickers\FilterPickers\NumberDecimal.fs" />
     <Compile Include="WhereBuilder.fs" />
     <Compile Include="CamlBuilder.fs" />
     <Content Include="packages.config" />
