--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,10 +12,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 2.2.108
+        dotnet-version: 3
     - name: Build with dotnet
-      run: |
-        git submodule update --init --recursive
-        dotnet restore CamlBuilder4000.sln
-        msbuild "CamlBuilder4000.sln" /p:Configuration=Release /verbosity:minimal
-        dotnet test /CamlBuilder.Tests/CamlBuilder.Tests.fsproj
+      run: dotnet build --configuration Release
