--- a/.github/workflows/NETFramework.yml
+++ b/.github/workflows/NETFramework.yml
@@ -8,10 +8,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1    
-    - uses: nuget/setup-nuget@v1      
+    - uses: actions/checkout@v1
+    - uses: nuget/setup-nuget@v1
     - run: nuget restore
     - name: Build DotNET45
       run: |
            cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
            .\MSBuild.exe $Env:GITHUB_WORKSPACE\
+    - name: tests
+      run: |
+          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
+          .\MSTest.exe $Env:GITHUB_WORKSPACE\
