--- a/.github/workflows/NETFramework.yml
+++ b/.github/workflows/NETFramework.yml
@@ -17,5 +17,5 @@ jobs:
            .\MSBuild.exe $Env:GITHUB_WORKSPACE\
     - name: tests
       run: |
-          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\"
-          .\MSTest.exe $Env:GITHUB_WORKSPACE\
+            cd $Env:GITHUB_WORKSPACE\
+            dotnet test --no-build
