--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ValenteMesmo.CamlBuilder</id>
-    <version>0.0.7</version>
+    <version>0.0.8</version>
     <title>CamlBuilder</title>
     <authors>ValenteMesmo</authors>
     <owners>ValenteMesmo</owners>
@@ -15,11 +15,17 @@
       <group targetFramework=".NETFramework4.5">
         <dependency id="FSharp.Core" version="4.7.0" />
       </group>
+      <group targetFramework=".NETStandard2.0">
+        <dependency id="FSharp.Core" version="4.7.0" />
+      </group>
     </dependencies>
   </metadata>
   <files>
-    <file src="CamlBuilder.NetFramework\bin\Release\CamlBuilder.NetFramework.dll" target="lib\net45\CamlBuilder.NetFramework.dll" />
-    <file src="CamlBuilder.NetFramework\bin\Release\CamlBuilder.NetFramework.pdb" target="lib\net45\CamlBuilder.NetFramework.pdb" />
-    <file src="CamlBuilder.NetFramework\bin\Release\CamlBuilder.NetFramework.XML" target="lib\net45\CamlBuilder.NetFramework.XML" />
+    <file src="lib\net45\CamlBuilder.NetFramework.dll" target="lib\net45\CamlBuilder.NetFramework.dll" />
+    <file src="lib\net45\CamlBuilder.NetFramework.pdb" target="lib\net45\CamlBuilder.NetFramework.pdb" />
+    <file src="lib\net45\CamlBuilder.NetFramework.XML" target="lib\net45\CamlBuilder.NetFramework.XML" />
+    <file src="lib\netstandard2.0\CamlBuilder.NetStandard.deps.json" target="lib\netstandard2.0\CamlBuilder.NetStandard.deps.json" />
+    <file src="lib\netstandard2.0\CamlBuilder.NetStandard.dll" target="lib\netstandard2.0\CamlBuilder.NetStandard.dll" />
+    <file src="lib\netstandard2.0\CamlBuilder.NetStandard.pdb" target="lib\netstandard2.0\CamlBuilder.NetStandard.pdb" />
   </files>
 </package>
