--- a/CamlBuilder.NetStandard/CamlBuilder.NetStandard.fsproj
+++ b/CamlBuilder.NetStandard/CamlBuilder.NetStandard.fsproj
@@ -11,21 +11,23 @@
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\LogicalOperatorPicker.fs" Link="NodePickers\LogicalOperatorPicker.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FieldTypePicker.fs" Link="NodePickers\FieldTypePicker.fs" />
     <Folder Include="NodePickers\FilterPickers\" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Bool.fs" Link="NodePickers\FilterPickers\Bool.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Choice.fs" Link="NodePickers\FilterPickers\Choice.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Text.fs" Link="NodePickers\FilterPickers\Text.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Date.fs" Link="NodePickers\FilterPickers\Date.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\FileDirRef.fs" Link="NodePickers\FilterPickers\FileDirRef.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Lookup.fs" Link="NodePickers\FilterPickers\Lookup.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\LookupMulti.fs" Link="NodePickers\FilterPickers\LookupMulti.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberDecimal.fs" Link="NodePickers\FilterPickers\NumberDecimal.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberFloat.fs" Link="NodePickers\FilterPickers\NumberFloat.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberInt.fs" Link="NodePickers\FilterPickers\NumberInt.fs" />
-    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Text.fs" Link="NodePickers\FilterPickers\Text.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Bool.fs" Link="NodePickers\FilterPickers\Bool.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\FileDirRef.fs" Link="NodePickers\FilterPickers\FileDirRef.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\Choice.fs" Link="NodePickers\FilterPickers\Choice.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\UniqueId.fs" Link="NodePickers\FilterPickers\UniqueId.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberInt.fs" Link="NodePickers\FilterPickers\NumberInt.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberFloat.fs" Link="NodePickers\FilterPickers\NumberFloat.fs" />
+    <Compile Include="..\CamlBuilder.NetFramework\NodePickers\FilterPickers\NumberDecimal.fs" Link="NodePickers\FilterPickers\NumberDecimal.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\WhereBuilder.fs" Link="WhereBuilder.fs" />
     <Compile Include="..\CamlBuilder.NetFramework\CamlBuilder.fs" Link="CamlBuilder.fs" />
   </ItemGroup>
 
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.2" />
+  </ItemGroup>
 
 </Project>
