--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,21 +2,24 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>ValenteMesmo.CamlBuilder</id>
-    <version>0.0.8</version>
+    <version>1.0.0</version>
     <title>CamlBuilder</title>
     <authors>ValenteMesmo</authors>
     <owners>ValenteMesmo</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <projectUrl>https://github.com/ValenteMesmo/ValenteMesmo.CamlBuilder</projectUrl>
     <description>Create caml query xmls with ease</description>
     <releaseNotes></releaseNotes>
     <copyright></copyright>
     <tags>sharepoint caml query</tags>
     <dependencies>
       <group targetFramework=".NETFramework4.5">
-        <dependency id="FSharp.Core" version="4.7.0" />
+        <dependency id="FSharp.Core" version="4.7.2" />
+        <dependency id="System.ValueTuple" version="4.5.0" />
       </group>
       <group targetFramework=".NETStandard2.0">
-        <dependency id="FSharp.Core" version="4.7.0" />
+        <dependency id="System.ValueTuple" version="4.5.0" />
+        <dependency id="FSharp.Core" version="4.7.2" />
       </group>
     </dependencies>
   </metadata>
