--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -16,19 +16,17 @@ jobs:
     steps:
 
       - name: Checkout repository
-        uses: actions/checkout@v1
-
-      - name: Setup .NET Core @ Latest
-        uses: actions/setup-dotnet@v1
-        with:
-          source-url: https://api.nuget.org/v3/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}     
+        uses: actions/checkout@v1 
 
       - name: Build solution and generate NuGet package
         run: |  
           cd CamlBuilder
           dotnet pack -c Release -o out  
 
+      - name: Setup NuGet.exe for use with actions
+        uses: NuGet/setup-nuget@v1.0.2
+        with:                    
+          nuget-api-key: ${{secrets.NUGET_KEY}} 
+
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push ./CamlBuilder/out/*.nupkg --skip-duplicate --no-symbols true
+        run: nuget push ./CamlBuilder/out/*.nupkg --skip-duplicate --no-symbols true
