--- a/.github/workflows/org-nuget-publish.yml
+++ b/.github/workflows/org-nuget-publish.yml
@@ -1,4 +1,4 @@
-name: nuget-publish
+name: org-nuget-publish
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
-    name: Update NuGet package
+    name: Update NuGet Org package
     steps:
 
       - name: Checkout repository
