allowing orderby after where

--- a/CamlBuilder/CamlBuilder.fsproj
+++ b/CamlBuilder/CamlBuilder.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>ValenteMesmo.CamlBuilder</PackageId>
-    <Version>3.0.0</Version>
+    <Version>3.0.1</Version>
     <Authors>ValenteMesmo</Authors>
     <Description>Create caml query xmls for sharepoint with ease
 ```C#
@@ -12,7 +12,7 @@ CamlBuilder.Where(f-&gt; f.Number("Age").IsGreaterThan(18)).Build()
     <PackageProjectUrl>https://github.com/ValenteMesmo/ValenteMesmo.CamlBuilder</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ValenteMesmo/ValenteMesmo.CamlBuilder</RepositoryUrl>
     <PackageTags>sharepoint caml query</PackageTags>
-    <PackageReleaseNotes>Removed support for older dotnet framework versions</PackageReleaseNotes>
+    <PackageReleaseNotes>allowing orderby after where</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,8 +31,9 @@ CamlBuilder.Where(f-&gt; f.Number("Age").IsGreaterThan(18)).Build()
     <Compile Include="NodePickers\FilterPickers\NumberInt.fs" />
     <Compile Include="NodePickers\FilterPickers\Text.fs" />
     <Compile Include="NodePickers\FilterPickers\UniqueId.fs" />
-    <Compile Include="WhereBuilder.fs" />
+    <Compile Include="RowContentBuilder.fs" />
     <Compile Include="OrderByBuilder.fs" />
+    <Compile Include="WhereBuilder.fs" />
     <Compile Include="CamlBuilder.fs" />
   </ItemGroup>
 
